--- a/install.txt
+++ b/install.txt
@@ -3,3 +3,5 @@ npm i react-redux @types/react-redux
 npm i moment
 npm i ant
 npm i react-router-dom @types/react-router-dom
+npm i axios
+npm i firebase
